# libraryms

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package.json  sqlx-data.json  style.css  tailwind.config.js
.github/workflows/: build.yml
_sql/: accounts.sql  books.sql  change_logs.sql
public/: style.scss
src/: fallback.rs  lib.rs  main.rs  serv.rs
src/api/: auth.rs  books.rs  entity.rs  mod.rs
src/app/: accounts.rs  auth.rs  books.rs  common.rs  health.rs  home.rs  ident.rs  mod.rs
src/backend/: auth.rs  books.rs  conf.rs  db.rs  ldap.rs  mod.rs
src/components/: assets.rs  auth.rs  book.rs  book_gallery.rs  home.rs  mod.rs  pagination.rs
src/conf/: mod.rs
src/data/: books.rs  error.rs  ldap.rs  mod.rs
src/data/accounts/: mod.rs
src/data/books/: mod.rs
src/entity/: mod.rs
style/: output.css  style.css  tailwind.css
templates/: base.html  book_detail.html  book_list.html  books_table.html  home.html  login.html
