[package]
name = "libraryms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.11.1" }
axum = { version = "0.6.0", features = ["http2", "macros", "headers"] }
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "macros"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1", "with-time-0_3"] }
uuid = "1.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
url = { version = "2.3.1", features = ["serde"] }
reqwest = { version = "0.11.13", features = ["json"] }
serde_json = "1.0.89"
clap = { version = "4.0.26", features = ["derive", "error-context", "help", "std", "suggestions", "usage"], default-features = false }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
toml = "0.5.9"
elasticsearch = { version = "8.4.0-alpha.1", features = ["default"] }
lazy_static = "1.4.0"
